$Id: History,v 1.39 2002-10-24 14:33:51 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

24th October 2002  John Allison  (greps-V04-01-00)
- Added G4AttDefStore.
- Further improved G4AttDef/Value.
- Added const G4std::vector<G4AttValue>* fAttValues/Defs to G4VisAttributes.

23rd October 2002  John Allison
- G4Colour class description corrected.
- G4VisAttributes comments slightly improved.
- G4AttDef and G4AttValue headers changed to follow G4 conventions.

27th September 2002  Joseph Perl
- Added first versions of headers for G4AttDef and G4AttValue.

10th September 2001  John Allison  (greps-V03-02-04)
- Added G4Scale::GuidanceString.

20th August 2001  John Allison  (greps-V03-02-03)
- Made typedef's public in G4Point3DList.hh and G4Polyline.hh.

14th August 2001  John Allison  (greps-V03-02-02)
- Coworks with vis-V03-02-11 and intercoms-V03-02-03.
- Added G4Polyline::transform.
- Fixed pedantic warnings in G4NURBS.

24th July May 2001  John Allison  (greps-V03-02-01)
- Improvements to comments and layout in G4VisExtent.
- Cosmetic improvements to G4Scale, small change of interface.

21st July May 2001  John Allison  (greps-V03-02-00)
- Added G4Scale.
