@@ -1,4 +1,4 @@
-$Id: History,v 1.39 2002-10-24 14:33:51 johna Exp $
+$Id: History,v 1.40 2002-10-28 11:13:07 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 28, 2002, J.Allison
+- Changed AttDefStore to return a map.
 
 24th October 2002  John Allison  (greps-V04-01-00)
 - Added G4AttDefStore.
